Removing Aside from bottom of expenses page

--- a/Members/Compare.cshtml
+++ b/Members/Compare.cshtml
@@ -9,7 +9,7 @@
     var SelectAverageQuery = ("SELECT DISTINCT Category, AVG(Price) as TotalPrice FROM Expense GROUP BY Category");
     var SelectUserDataQuery = ("SELECT Category, SUM(Price) as TotalPrice FROM Expense WHERE UserId = "+ @CurrentUserId + " GROUP BY Category");
     var SelectedData = db.Query(SelectAverageQuery);
-    var SelectedUserData = db.QueryValue(SelectUserDataQuery);
+    var SelectedUserData = db.Query(SelectUserDataQuery);
 
 
 
@@ -26,7 +26,7 @@
         compChart = compChart.AddSeries("User", chartType:"Line",
             xValue: SelectedUserData, xField: "Category",
             yValues: SelectedUserData, yFields: "TotalPrice");
-            compChart=compChart.Write();
+            
         
 
 }
@@ -41,7 +41,7 @@
     <body>
         <h1>This will do a basic comparison between you and all other users of he site and app.</h1>
         <div>
-           
+           compChart=compChart.Write();
         
         </div>
     </body>
