Change order of contact and money management tabs at top. Changed it t display Contact Us rather then Contact

--- a/_SiteLayout.cshtml
+++ b/_SiteLayout.cshtml
@@ -39,8 +39,8 @@
                             <li><a href="~/">Home</a></li>
                             <li><a href="~/Members/Expenses">Expenses</a></li>
                             <li><a href="~/Members/Charts">Charts</a></li>
-                            <li><a href="~/Contact">Contact</a></li>
                             <li><a href="~/Analytics">Money Management</a></li>
+                            <li><a href="~/Contact">Contact Us</a></li>
                         </ul>
                     </nav>
                 </div>
