--- a/Analytics.cshtml
+++ b/Analytics.cshtml
@@ -12,16 +12,16 @@
     </head>
     <body>
         <h1>Money Management</h1>
-        <p>Money manager is designed to help you gt a feel for your expenses. It provides the option to cpmpare your expenses to those of other people in similar age ranges, and also gives you siggestions as to where you can save money.</p>
+        <p>Money manager is designed to help you get a feel for your expenses. It provides the option to compare your expenses to those of other people in similar age ranges, and also gives you suggestions as to where you can save money.</p>
 
         <div id="Block">
             <h2>Compare me to other people</h2>
-            <p>To enable you to compare to other people, you need to give us a little more inforation about yourself to help us make comparsons that make sense.</p>
+            <p>To enable you to compare to other people, you need to give us a little more information about yourself to help us make comparisons that make sense.</p>
             <a href="~/Members/Compare">Get Started</a>
         </div>
         <div id="Block">
             <h2>Help me save money</h2>
-            <p>AllTheAirgead helps you save money by going through your expenses and identifying the ones you have specified as lower priority. Using this, we can suggest where you culd cut back on spending. You can alter the default priority of each category, as well as change the priority of individual expenses when you create them.</p>
+            <p>AllTheAirgead helps you save money by going through your expenses and identifying the ones you have specified as lower priority. Using this, we can suggest where you could cut back on spending. You can alter the default priority of each category, as well as change the priority of individual expenses when you create them.</p>
             <a href="~/Members/Saving">Help me save</a>
         </div>
 
