--- a/AllTheAirgeadApp/alltheairgeadApp/LoginPage.xaml
+++ b/AllTheAirgeadApp/alltheairgeadApp/LoginPage.xaml
@@ -47,7 +47,7 @@
 
                 <PivotItem Header="Register">
                     <StackPanel Margin="0,50">
-                        <TextBox x:Name="EmailRegister" HorizontalAlignment="Center" Width="300" PlaceholderText="Email Address" IsSpellCheckEnabled="False" IsTextPredictionEnabled="False" TextChanged="EmailRegister_TextChanged"/>
+                        <TextBox x:Name="EmailRegister" InputScope="EmailSmtpAddress" HorizontalAlignment="Center" Width="300" PlaceholderText="Email Address" IsSpellCheckEnabled="False" IsTextPredictionEnabled="False" TextChanged="EmailRegister_TextChanged"/>
                         <PasswordBox x:Name="PasswordRegister" HorizontalAlignment="Center" Width="300" PlaceholderText="Password" Margin="0,5,0,2" PasswordChanged="PasswordRegister_PasswordChanged"/>
                         <PasswordBox x:Name="PasswordConfirmationRegister" HorizontalAlignment="Center" Width="300" PlaceholderText="Confirm Password" Margin="0,2,0,2" PasswordChanged="PasswordConfirmationRegister_PasswordChanged"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
