Added progress wheel when doing database fetches

--- a/AllTheAirgeadApp/alltheairgeadApp/ItemPage.xaml
+++ b/AllTheAirgeadApp/alltheairgeadApp/ItemPage.xaml
@@ -19,7 +19,7 @@
         </TransitionCollection>
     </Page.Transitions>
 
-    <Grid x:Name="LayoutRoot">
+    <Grid x:Name="ContentRoot">
         <Grid.ChildrenTransitions>
             <TransitionCollection>
                 <EntranceThemeTransition/>
