--- a/Members/Compare.cshtml
+++ b/Members/Compare.cshtml
@@ -27,8 +27,8 @@
     <body>
         <h1>This will do a basic comparison between you and all other users of he site and app.</h1>
         <div>
-            <p></p>
-           <img src="~/Charts/ComparisonChart.cshtml" alt="Expense comparison chart"/>   
+            <p><img src="~/Charts/ComparisonChart.cshtml" alt="Expense comparison chart"/> </p>
+             
 
         </div>
     </body>
